# pcgw_api

./: .gitignore  LICENSE  README.md  pyproject.toml  test.py
app/: main.py
app/api/: routes.py
app/database/: connection.py
app/schemas/: models.py
app/scraper/: client.py  game.py  utils.py
