[project]
name = "pcgw"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beanie>=2.1.0",
    "beautifulsoup4>=4.14.3",
    "fastapi[standard]>=0.135.3",
    "pydantic>=2.12.5",
    "pymongo[srv]>=4.16.0",
    "requests>=2.33.1",
    "uvicorn>=0.44.0",
]

[tool.uv]
cache-dir = "./.uv_cache"
